@@ -1,7 +1,12 @@
+Sat Dec 25 09:50:29 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)
+
+	* printcmd.c (disassemble_command): Call wrap_here between printing
+	address and printing instruction.
+
 Fri Dec 24 14:23:57 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)
 
 	* stabsread.c (read_type): Don't fall through 'S' case (the case it
-	was falling though happened to do the thing thing ("break;") but that
+	was falling though happened to do the right thing ("break;") but that
 	is hardly a good thing to assume).
 
 Tue Dec 21 13:32:02 1993  Per Bothner  (bothner@kalessin.cygnus.com)
